--- a/paper/main.tex
+++ b/paper/main.tex
@@ -35,12 +35,14 @@
 \newunicodechar{↝}{\ensuremath\red}
 \newunicodechar{↭}{\ensuremath\leftrightsquigarrow}
 \newunicodechar{⇒}{\ensuremath\reds}
+\newunicodechar{⊸}{\ensuremath\multimap}
 \newunicodechar{≃}{\ensuremath\simeq}
 \newunicodechar{Γ}{\ensuremath\ContextC}
 \newunicodechar{Δ}{\ensuremath\ContextD}
 \newunicodechar{Θ}{\ensuremath\ContextE}
 \newunicodechar{∷}{\ensuremath{{::}}}
 \newunicodechar{∃}{\ensuremath\exists}
+\newunicodechar{λ}{\ensuremath\lambda}
 \newunicodechar{π}{\ensuremath\pi}
 \newunicodechar{σ}{\ensuremath\sigma}
 \newunicodechar{ρ}{\ensuremath\rho}
@@ -50,6 +52,7 @@
 \newunicodechar{⟧}{\ensuremath\rrbracket}
 \newunicodechar{𝒞}{\ensuremath\ReductionContext}
 \newunicodechar{ℕ}{\ensuremath{\mathbb{N}}}
+\newunicodechar{𝔹}{\ensuremath{\mathbb{B}}}
 \newunicodechar{≫}{\ensuremath\gg}
 \newunicodechar{≪}{\ensuremath\ll}
 \newunicodechar{∋}{\ensuremath\ni}
@@ -123,6 +126,8 @@
 \input{introduction}
 \input{calculus}
 \input{agda}
+\input{Examples}
+\input{related}
 \input{conclusion}
 
 \bibliography{main}
